--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    
+    <link rel="stylesheet" href="style.css">
     <title>Работа со шрифтами</title>
 </head>
 <body>
     <h1>Изучаем свойства текста и шрифтов</h1>
 
-    <p>
+    <p class="text">
         Это пример текста, в котором вы должны применить свойства CSS:
         font-family, font-style, font-variant, font-weight, font-size,
         text-decoration, text-align, text-indent и text-transform.
     </p>
 
-    <p> 
+    <p class="wer"> 
         При наведении курсора на этот текст, он должен изменится.
     </p>
 
